--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.12&key=7c7342705574ca93a6418283b8ce53c4&plugin=AMap.PolyEditor"></script>
     <title>admin</title>
   </head>
   <body>
